--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "build": "next build",
         "dev": "next dev",
+        "lint": "next lint",
         "start": "next start"
     },
     "dependencies": {
@@ -11,6 +12,7 @@
         "gray-matter": "^4.0.3",
         "marked": "^13.0.2",
         "next": "^14.2.4",
+        "qs": "^6.12.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1"
     },
@@ -19,6 +21,8 @@
         "@types/node": "20.14.10",
         "@types/react": "18.3.3",
         "autoprefixer": "^10.4.19",
+        "eslint": "^8.57.0",
+        "eslint-config-next": "^14.2.5",
         "postcss": "^8.4.39",
         "tailwindcss": "^3.4.6"
     }
